Finisged my first ever website

--- a/index.html
+++ b/index.html
@@ -10,16 +10,53 @@
 </head>
 <body>
 
+<section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="text-highlight">Peter Parker</span> World</h1>
+        <h1><span class="orange-highlight">Peter Parker</span> World</h1>
         <h3>World class professional webdeveloper</h3>
         <p>You might saw me jumping.climbing buildings.and stopping trains But nobody pays me a dime for that work That's why I am learning and mastering web development i will not stop untill i become the web Development Hero</p>
+        <a target="_blank" class="link-button" href="#">HIRE ME</a>
     </div>
 
     <div class="half-width">
         <img src="images/jhankar.png" alt="">
     </div>
+</section>
+
+<section class="dream-area">
+
+    <div class="half-width">
+        <img src="images/jhankar2.png" alt="">
+    </div>
+
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p>You might saw me jumping.climbing buildings.and stopping  
+            ering web development i will not stop untill i become the web Development Hero</p>
+        <a target="_blank" class="link-button" href="#">DOWNLOAD RESUME</a>
+    </div>
+</section>
+
+
+<section class="experience-area">
+    <h2>Experiences</h2>
+    <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Dev</h2>
+        <h3 class="orange-highlight">2020 - Present | Pro level Web Dev</h3>
+        <p>I am the master of HTML.CSS and Javascript I know everything needed to make a website function, effcient I didn't stop with the web. I went beyond with most popular Javascript frameword called Vue JS. I even know hte deploment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div id="baby-web" class="half-width single-experience">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-highlight">2020-2021 | Programing Hero Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer.I made their website and showed it to them. They lided id. And uploaded the content it was fun working at Programing Hero.</p>
+    </div>
+</section>
+
+<footer>
+    <p class="text-center">@ Faruk 2021, all right reserved</p>
+</footer>
     
 </body>
 </html>
